...
              ScaffoldMessenger.of(context).clearSnackBars();
              Navigator.pop(context);
            },
          ) : null,
          automaticallyImplyLeading: false,
          title: !context.isDesktop ? Text(
            'Cart',
            style: AppTextStyles.font(
              context,
              fontSize: 24,
              fontWeight: FontWeight.w700,
            ),
          ) : null,
...
                backgroundColor: AppColors.primaryOrange,
                foregroundColor: Colors.white,
                shape: const StadiumBorder(),
                elevation: 0,
              ),
              child: Text(
                'Check out',
                style: AppTextStyles.font(
                  context,
                  fontSize: 20,
                  fontWeight: FontWeight.w700,
                ),
              ),
...
